# ssc-resources-hub

./: .gitmodules  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci_mkdocs.yaml
about/: index.html
community/: index.html
community/contribute/: index.html
community/contribute-codebase/: index.html
community/contribute-docs/: index.html
docs/: about.md  index.md
docs/community/: contribute-codebase.md  contribute-docs.md  contribute.md  index.md
docs/learn/explanation/: software-engineering-intro.md
docs/learn/on-demand-courses/: index.md
docs/resources/ssc-templates/: cpp-templates.md  documentation-templates.md  fortran-templates.md  jupyter-templates.md  matlab-templates.md  python-templates.md
docs/ssc-resource-hub/: project.md
learn/explanation/: index.html
learn/explanation/software-engineering-intro/: index.html
learn/on-demand-courses/: index.html
learn/tutorials/quickstart/: index.html
learn/tutorials/tutorial0001_basics/: index.html
material/overrides/: home.html  main.html
resources/ssc-templates/cpp-templates/: index.html
resources/ssc-templates/documentation-templates/: index.html
resources/ssc-templates/fortran-templates/: index.html
resources/ssc-templates/jupyter-templates/: index.html
resources/ssc-templates/matlab-templates/: index.html
resources/ssc-templates/python-templates/: index.html
search/: search_index.json
ssc-resource-hub/design-philosophy/: index.html
ssc-resource-hub/project/: index.html
ssc-resource-hub/use-cases/: index.html
twin-repos/cookiecutter-cpp-project/: index.html
twin-repos/cookiecutter-cpp-project/CHANGELOG/: index.html
twin-repos/cookiecutter-cpp-project/COPYING/: index.html
twin-repos/cookiecutter-cpp-project/LICENSE/: index.html
twin-repos/cookiecutter-cpp-project/{{cookiecutter.project_slug}}/: index.html
twin-repos/cookiecutter-python-package/: index.html
twin-repos/cookiecutter-python-package/COPYING/: index.html
twin-repos/cookiecutter-python-package/LICENSE/: index.html
twin-repos/cookiecutter-python-package/{{cookiecutter.project_slug}}/: index.html
twin-repos/cpp-project-template/: index.html
twin-repos/fortran-project-template/: index.html
twin-repos/guidelines/: index.html
twin-repos/lunch-python/: index.html
twin-repos/python-project-template/: index.html
(+37 files in other folders)
