#===================================
#=======        BUILD       ========
#===================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#===================================
#=======       PROJECT      ========
#===================================
[project]
name = "ssc-resource-hub"
version = "0.0.1"
description = "Start your Software Engineering journey with this all-in-one resource hub."
license = "MIT"

authors = [
  {name = "Edwin C.", email="edwin@gmail.com"},
]
maintainers = [
    {name="Edwin C.", email="edwin@gmail.com"},
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-include-markdown-plugin>=7.1.5",
    "toml",
]

[project.optional-dependencies]
dev = [
    "distlib",
    "pre-commit>=2.17.0",
    "bump2version",
    "twine",
]
docs = [
    "mkdocs-material>=9.6.14",
    "pymdown-extensions>=10.15",
    "mkdocstrings[python]>=0.29.1,<0.30",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocs-minify-plugin~=0.7"
]

#===================================
#=======        TOOL        ========
#===================================
[tool.hatch.build.targets.wheel]
packages = ["ssc-resource-hub"]



